# github-rest

./: .gitignore  Cargo.toml  README.md  a.rs
.cargo/: config.toml
src/: client.rs  lib.rs
src/builders/: commits.rs  issues.rs  mod.rs  reactions.rs
src/methods/: commits.rs  issues.rs  misc.rs  mod.rs  users.rs  util.rs
src/model/: commits.rs  events.rs  issues.rs  release.rs
src/structs/: commits.rs  issues.rs  mod.rs  pull_request.rs  push.rs  reactions.rs  release.rs  repository.rs  star.rs  user.rs  workflows.rs
