[package]
name = "github-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
github-api = { git = "https://github.com/octocat-rs/github-api" }
reqwest = "0.11.8"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
